2006-05-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py (main): new function.
	(ComparisonData): new class.

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): be more
	careful with generating new LedgerLineSpanners.

	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.

	* ly/engraver-init.ly: remove Ledger_line_engraver from Voice
	context. This fixes double ledger lines in output. 

	* lily/system.cc (get_paper_system): remove 3 layer limit.

	* buildscripts/output-distance.py (SystemLink.distance): new
	file. Compare signatures.

	* python/safeeval.py (SafeEval.visitUnarySub): new file.

	* lily/grob-array.cc (remove_duplicates): rename from
	uniq(). Sort before calling uniq() so it actually works.

2006-05-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
	\version from lilypond file snippet.
	(Lilypond_file_snippet.ly): oops. typo.
	(find_toplevel_snippets): urgh. again.

	* lily/system.cc (get_paper_systems): uniq all_elements_ , to
	prevent duplicated broken items in output.

	* scm/framework-eps.scm (output-classic-framework): only dump if
	dump-signatures is set.

	* scm/lily.scm (define-scheme-options): add dump-signatures option.

	* scm/stencil.scm (write-system-signature): new routine: write
	python parseable signature of a separate paper system.

2006-05-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/stanza-number-engraver.cc (process_music): use is_markup()
	iso is_string().
	include header.

2006-05-25  Erik Sandberg  <mandolaerik@gmail.com>

	* translator-group.cc: send music events to engravers in
	non-bottom contexts.

	* tuplet-engraver.cc: process tuplet brackets in correct order.

2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: STEPMAKE_PYTHON(): clear cached value since
	arg 2 might point us to a new binary (patch by Karl Hammar)
	
2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>
