@@ -114,14 +114,13 @@ Grob::get_print_stencil () const
       else
 	{
 	  SCM expr = m->expr ();
-	  if (point_and_click_global)
-	    expr = scm_list_3 (ly_symbol2scm ("grob-cause"),
-			       self_scm (), expr);
+	  expr = scm_list_3 (ly_symbol2scm ("grob-cause"),
+			     self_scm (), expr);
 
 	  retval = Stencil (m->extent_box (), expr);
 	}
       SCM rot = get_property ("rotation");
-      if (rot != SCM_EOL)
+      if (scm_is_pair (rot))
 	{
 	  Real angle = scm_to_double (scm_car (rot));
 	  Real x = scm_to_double (scm_cadr (rot));
